2008-06-10  Nicolas François  <nicolas.francois@centraliens.net>

	* lib/port.c: Add brackets and parenthesis.
	* lib/port.c: Change isttytime() prototype to return a bool.
	* lib/port.c: Ignore the return value of fclose () (file open
	read-only).
	* lib/port.c: Avoid multi-statements lines.

2008-06-10  Nicolas François  <nicolas.francois@centraliens.net>

	* src/id.c: Ignore the return value of fputs(), puts(), putchar(),
	and printf().
	* src/id.c: Ignore return value of setlocale(),
	bindtextdomain(), and textdomain().
	* src/id.c: Add brackets and parenthesis.
	* src/id.c: Avoid implicit conversion of pointers / integers
	to booleans.

2008-06-10  Nicolas François  <nicolas.francois@centraliens.net>

	* src/chsh.c: Use a bool when possible instead of int integers.
	* src/chsh.c: restricted_shell() renamed is_restricted_shell().
	check_shell() renamed shell_is_listed().
	* src/chsh.c: Ignore return value of setlocale(),
	bindtextdomain(), and textdomain().
	* src/chsh.c: Avoid implicit conversion of pointers / integers
	to booleans.
	* src/chsh.c: Ignore the return value of pam_end() before
	exiting.

2008-06-10  Nicolas François  <nicolas.francois@centraliens.net>

	* src/grpunconv.c: Use a bool when possible instead of int
	integers.
	* src/grpunconv.c: Add brackets and parenthesis.
	* src/grpunconv.c: Ignore return value of setlocale(),
	bindtextdomain(), and textdomain().
	* src/grpunconv.c: Avoid implicit conversion of pointers / integers
	to booleans.

2008-06-10  Nicolas François  <nicolas.francois@centraliens.net>

	* src/sulogin.c: Ignore return value of setlocale(),
	bindtextdomain(), and textdomain().
	* src/sulogin.c: Avoid implicit conversion of pointers / integers
	/ chars to booleans.
	* src/sulogin.c: Avoid assignments in comparisons.
	* src/sulogin.c: Ignore the return value of alarm().

2008-06-10  Nicolas François  <nicolas.francois@centraliens.net>

	* src/groups.c: Use a bool when possible instead of int integers.